@@ -162,6 +162,8 @@ Revision history for Perl module Math::Prime::Util
     - The 70-rt-bignum test was horrendously slow with bignum 0.60+.
       It was bypassing the validation that sanitized the input.
 
+    - Fix logint for base > n.  Github 75.
+
     [FUNCTIONALITY AND PERFORMANCE]
 
     - LMO prime count is 1.2-1.5x faster.
